--- a/css/styles.css
+++ b/css/styles.css
@@ -38,12 +38,11 @@ body {
     width: 100%;
     height: 150px;
     position: absolute;
-    background-color: #f5c577;
     top: 65px;
-    opacity: 0;
+    background-color: #f5c577;
     border-radius: 0px 0px 20px 20px;
-    z-index: 10;
-    transition: all 500ms ease-out;
+    opacity: 0;
+    transition: opacity 500ms ease-out;
 }
 
 #menu.active { opacity: 1; }
@@ -101,7 +100,6 @@ body {
     grid-template-rows: 1fr 60%;
     height: 650px;
     background-color: #FFE4B8;
-    /* border-radius: 0px 0px 100% / 15%; */
     border-bottom-right-radius: 100% 15%;
 }
 
@@ -145,9 +143,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 20px;
 }
-
-#title-gallery h1 { left: 20px; }
 
 #carousel {
     position: relative;
@@ -186,6 +183,16 @@ body {
 
 #img-info { border-top: 1.5px solid rgb(243, 239, 239); }
 
+#see-more {
+    display: flex;
+    justify-content: center;
+    height: 60px;
+}
+
+#see-more p {
+    font-size: 20px;
+}
+
 /* CONTACT */
 
 .contact {
@@ -221,6 +228,91 @@ body {
 .icons {
     width: 30px;
     padding: 0px 10px;
+    cursor: pointer;
 }
 
 #copyright { padding-top: 20px; }
+
+@media (min-width: 950px) {
+    /* HEADER */
+    #header { justify-content: left; }
+
+    #header.active { background-color: #FFE4B8; }
+
+    #img-logo { left: 30px; }
+
+    #text-logo {
+        position: absolute;
+        left: 90px;
+    }
+
+    #toggle-btn { display: none; }
+
+    #menu {
+        position: absolute;
+        top: 0px;
+        right: 15px;
+        height: 100%;
+        width: 300px;
+        border-radius: 0px;
+        background-color: rgba(255, 0, 0, 0);
+        opacity: 1;
+        transition: none;
+    }
+
+    #menu.active { 
+        background-color: rgba(255, 0, 0, 0);
+        opacity: 1; 
+    }
+    
+    #menu ul {
+        display: flex;
+        height: 100%;
+    }
+
+    #menu ul li {
+        position: relative; 
+        padding-right: 30px;
+    }
+
+    /* PRESENTATION */
+
+    .presentation {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 100%;
+        border-bottom-right-radius: 100% 25%;
+        border-bottom-left-radius: 100% 25%;
+    }
+
+    #container-img {
+        display: flex;
+        height: 100%;
+        align-items: center;
+    }
+
+    #container-img img {
+        position: relative;
+        width: 350px;
+        height: 350px;
+        left: -10%;
+    }
+
+    #container-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #text,
+    #text-sub {
+        position: relative;
+        right: -10%;
+        width: 350px;
+        text-align: left;
+    }
+
+    #text { font-size: 70px; }
+
+    #text-sub { font-size: 33px; }
+}
