--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ body {
     font-size: 18px;
 }
 
+#menu ul li a:hover {
+    color: gray;
+    border-bottom: 1px solid gray;
+}
+
 #menu {
     width: 100%;
     height: 150px;
@@ -196,7 +201,7 @@ body {
 /* CONTACT */
 
 .contact {
-    height: 300px;
+    height: 400px;
     grid-area: contact;
     background-color: #DCDFE2;
     display: flex;
@@ -207,7 +212,14 @@ body {
 
 .contact-item,
 .contact-title {
-    padding: 10px;
+    position: relative;
+}
+
+.contact-title { top: -5%; }
+
+.contact-item {
+    top: 5%;
+    padding: 15px;
 }
 
 .contact-item { color: #47525E; }
@@ -315,4 +327,15 @@ body {
     #text { font-size: 70px; }
 
     #text-sub { font-size: 33px; }
+}
+
+@media (min-width: 1200px) {
+    #img-logo { left: 10%; }
+    #text-logo { left: 14%; }
+    #menu { right: 8%; }
+    
+    .gallery {
+        padding-left: 3%;
+        padding-right: 3%;
+    }
 }
