--- a/css/products.css
+++ b/css/products.css
@@ -14,8 +14,11 @@ body {
     grid-template-areas:    
         "header"
         "gallery"
+        "contact"
         "footer";
 }
+
+/* GALLERY */
 
 .gallery {
     grid-area: gallery;
@@ -61,11 +64,67 @@ body {
 #text-info {
     font-size: 20px;
     text-align: center;
+    padding-top: 10px;
+}
+
+.item-gallery:hover {
+    height: 390px;
+    width: 95%;
+    transition: all 200ms linear;
+}
+
+/* IMAGE EXPAND */
+
+#image-expand {
+    display: none;
+}
+
+#image-expand.active {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.8)
+}
+
+#image-expand-bg.active {    
+    height: 60%;
+    width: 80%;
+    background-color: white;
+    border-radius: 5px;
+}
+
+#image-expand-close.active {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    padding-right: 5px;
+    padding-top: 5px;
+    float: right;
+    cursor: pointer;
+}
+
+#image-expand-container.active {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 @media (min-width: 700px) {
     #container-gallery {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    #image-expand-bg.active {    
+        height: 60%;
+        width: 60%;
     }
 }
 
@@ -74,5 +133,10 @@ body {
         grid-template-columns: repeat(4, 1fr);
         padding-left: 10%;
         padding-right: 10%;
+    }
+
+    #image-expand-bg.active {    
+        height: 60%;
+        width: 50%;
     }
 }
